# blocks_of_life

./: Cargo.toml  README.md
crates/app/biology_cli/: Cargo.toml
crates/app/biology_cli/src/: main.rs
crates/domain/biology/: Cargo.toml
crates/domain/biology/src/: lib.rs
crates/domain/biology/src/anatomy/: README.md  appendage.rs  arm_measurements.rs  body.rs  leg_measurements.rs  limb_status.rs  mod.rs
crates/domain/biology/src/characteristics/: README.md  locomotion.rs  mod.rs  presentation.rs  structural.rs
crates/domain/biology/src/classification/: mod.rs  sex.rs  species.rs
crates/domain/biology/src/ecosystem/: README.md  environment.rs  interactions.rs  mod.rs  population.rs
crates/domain/biology/src/nomenclature/: README.md  mod.rs  nomenclature.rs
crates/domain/biology/src/patterns/: README.md  locomotion_patterns.rs  mod.rs  presentation_patterns.rs  structural_patterns.rs
crates/domain/biology_animalia/: Cargo.toml  README.md
crates/domain/biology_animalia/src/: animal.rs  lib.rs
crates/domain/biology_animalia/tests/: human_tests.rs  taxonomy_integration_tests.rs
crates/domain/biology_archaea/: Cargo.toml
crates/domain/biology_bacteria/: Cargo.toml
crates/domain/biology_fungi/: Cargo.toml
crates/domain/biology_plantae/: Cargo.toml
crates/domain/biology_protista/: Cargo.toml
crates/shared/biology_shared/: Cargo.toml
crates/shared/biology_shared/src/: lib.rs  nomenclature.rs
crates/shared/core_shared/: Cargo.toml
crates/shared/core_shared/src/: identity.rs  lib.rs  orientation.rs  units.rs
(+37 files in other folders)
