[workspace]
members = [
    "crates/app/biology_cli",
    "crates/domain/biology",
    "crates/domain/biology_animalia",
    "crates/domain/biology_archaea",
    "crates/domain/biology_bacteria",
    "crates/domain/biology_fungi",
    "crates/domain/biology_plantae",
    "crates/domain/biology_protista",
    "crates/shared/biology_shared"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Stephen Burton"]
description = "An exercise in iterative software design"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Shared dependencies can be defined here
